Adde convert token price command

--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
       "title": "View Trending Tokens",
       "description": "",
       "mode": "view"
+    },
+    {
+      "name": "convert",
+      "title": "Convert",
+      "description": "",
+      "mode": "view"
     }
   ],
   "dependencies": {
